# goodrestaurants

./: README.md  boroughs_data.csv  combined_rests_data.csv  final_restaurants_analysis.ipynb  goodrestaurants(1).ipynb  goodrestaurants.ipynb  newer_rests_data.csv  pyproject.toml  restaurant_analysis.ipynb  restaurants_analysis.ipynb  restaurants_data.csv  testing.ipynb
res_env/: pyvenv.cfg
res_env/Scripts/: activate  activate.bat
src/restaurant_analysis/: rest_analysis.py  rest_inference.py  rest_modeling.py  rest_summary.py  restaurant.ipynb  restaurant_analysis.ipynb  restaurants_data.csv  rests_model.py  yelpapi.py
