[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "goodrestaurants"
authors = [
    {name = "Vinicius Giannaccini", email = "vgiannac@mail.yu.edu"},
    {name = "Benyamin Besthof", email = "bbesthof@mail.yu.edu"},
    {name = "Mapalo Lukashi", email = "mlukshi@mail.yu.edu"},
]
maintainers = [
    {name = "Vinicius Giannaccini"},
    {name = "Benyamin Besthof"},
    {name = "Mapalo Lukashi"},
]
description = "Data summary, Exploraty Data, and Inference."
readme = "README.md"
keywords = ["python", "summary", "EDA", "Inference" ]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "seaborn>=0.13",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scikit-learn>=1.3.2",
    "scipy>=1.11.3",
    "lxml>=4.6",

]
version= "0.1.0" 

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"restaurant_analysis" = ["*"]
